turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:14: error: type mismatch;
 found   : Array[Int]
 required: Int
var rule:Array[Array[Array[Int]]] = Array(Array(Array(1,8,0),Array(0,1,0),Array(Array(1,8,1),Array(0,1,1)))) // Change this
                                                                                     ^Turmite:14: error: type mismatch;
 found   : Array[Int]
 required: Int
var rule:Array[Array[Array[Int]]] = Array(Array(Array(1,8,0),Array(0,1,0),Array(Array(1,8,1),Array(0,1,1)))) // Change this
                                                                                                  ^